feature(08/02/2022): run fix deprecated code